# ens-aw-core

./: .gitignore  .gitmodules  README.md  meson.build
po/: com.github.subhadeepjasu.ensembles.pot
po/extra/: POTFILES  extra.pot
src/: meson.build
src/classes/: AWBuilder.vala  AWCore.vala  ArrangerWorkstation.vala  ArrangerWorkstationBuilder.vala  Service.vala
src/classes/Analysers/: ChordAnalyser.vala  StyleAnalyser.vala  VoiceAnalyser.vala
src/classes/AudioEngine/: SynthEngine.vala  SynthModPresets.vala  SynthProvider.vala  SynthSettings.vala  SynthSettingsPresets.vala
src/classes/Drivers/: MIDIDriver.vala  MIDIHost.vala  MIDIInputHost.vala
src/classes/FileLoaders/: StyleFileLoader.vala
src/classes/MIDIPlayers/: StyleEngine.vala
src/classes/Models/: Chord.vala  MIDIDevice.vala  MIDIEvent.vala  Registry.vala  Style.vala  StylePart.vala  Voice.vala
src/classes/Plugins/: Plugin.vala  PluginManager.vala
src/classes/Plugins/AudioPlugins/: AudioPlugin.vala  Port.vala
src/classes/Plugins/AudioPlugins/Lv2/: LV2EvBuf.vala  LV2Log.vala  LV2Manager.vala  LV2Nodes.vala  LV2Options.vala  LV2Plugin.vala  LV2PortAnalyser.vala  LV2SyMap.vala  LV2URIDs.vala  LV2Worker.vala
src/classes/Plugins/AudioPlugins/Lv2/Ports/: LV2AtomPort.vala  LV2ControlPort.vala  LV2Port.vala
src/classes/Racks/: DSPRack.vala  Rack.vala  VoiceRack.vala
src/classes/Utils/: Console.vala  ErrorDomains.vala  MIDI.vala  Math.vala  StyleMIDIModifiers.vala  SyMap.vala
src/interfaces/: IAWCore.vala  IArrangerWorkstation.vala
src/interfaces/Analysers/: IVoiceAnalyser.vala
src/interfaces/AudioEngine/: ISynthEngine.vala  ISynthProvider.vala
src/interfaces/FileLoaders/: IStyleFileLoader.vala
src/interfaces/MIDIPlayers/: IStyleEngine.vala
subprojects/: libvinject.wrap
vapi/: lilv-0.vapi  lv2.vapi  zix-0.vapi
