interfaces = files(
    # Core
    'interfaces/IArrangerWorkstation.vala',

    'interfaces/AudioEngine/ISynthEngine.vala',
    'interfaces/AudioEngine/ISynthProvider.vala',

    'interfaces/Analysers/IVoiceAnalyser.vala',

    'interfaces/FileLoaders/IStyleFileLoader.vala',

    'interfaces/MIDIPlayers/IStyleEngine.vala'
)

classes = files (
    # Core
    'classes/ArrangerWorkstation.vala',

    'classes/AudioEngine/SynthEngine.vala',
    'classes/AudioEngine/SynthProvider.vala',
    'classes/AudioEngine/SynthSettingsPresets.vala',

    'classes/Analysers/ChordAnalyser.vala',
    'classes/Analysers/StyleAnalyser.vala',
    'classes/Analysers/VoiceAnalyser.vala',

    'classes/FileLoaders/StyleFileLoader.vala',

    'classes/MIDIPlayers/StyleEngine.vala',

    'classes/Racks/Rack.vala',
    'classes/Racks/DSPRack.vala',
    'classes/Racks/VoiceRack.vala',

    # Utilities
    'classes/Utils/Console.vala',
    'classes/Utils/ErrorDomains.vala',
    'classes/Utils/StyleMIDIModifiers.vala',
    'classes/Utils/MIDI.vala',
    'classes/Utils/Math.vala',

    # Models
    'classes/Models/Chord.vala',
    'classes/Models/Registry.vala',
    'classes/Models/Voice.vala',
    'classes/Models/Style.vala',
    'classes/Models/StylePart.vala',

    # Plugins
    'classes/Plugins/Plugin.vala',
    'classes/Plugins/PluginManager.vala',

    # Audio Plugins
    'classes/Plugins/AudioPlugins/AudioPlugin.vala',
    'classes/Plugins/AudioPlugins/Port.vala',

    # LV2 Plugins
    'classes/Plugins/AudioPlugins/Lv2/LV2Manager.vala',
    'classes/Plugins/AudioPlugins/Lv2/LV2Plugin.vala',
    'classes/Plugins/AudioPlugins/Lv2/LV2SyMap.vala',
    'classes/Plugins/AudioPlugins/Lv2/LV2EvBuf.vala',
    'classes/Plugins/AudioPlugins/Lv2/LV2Worker.vala',
    'classes/Plugins/AudioPlugins/Lv2/LV2PortAnalyser.vala',
    'classes/Plugins/AudioPlugins/Lv2/Ports/LV2Port.vala',
    'classes/Plugins/AudioPlugins/Lv2/Ports/LV2ControlPort.vala',
    'classes/Plugins/AudioPlugins/Lv2/Ports/LV2AtomPort.vala'
)


sources = [interfaces, classes]
